--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Punds</title>
     
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
 
     <!-- Favicon Links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/favicon_io/favicon.ico" />
-    <link rel="manifest" href="/favicon_io/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Your Website</h1>
-        <p>This is your homepage. Your website is under construction. Stay tuned!</p>
+        <h1>Welcome to Punds</h1>
+        <p>This website is under construction. Stay tuned!</p>
     </div>
 
-    <!-- Optional: Canvas for additional graphics -->
+    <!-- Canvas for Lightning Animation -->
     <canvas id="lightning"></canvas>
     
     <!-- JavaScript File -->
