--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Punds Application Tracker</title>
+    <title>Punds</title>
     <meta name="description" content="Track and organize your job applications in one place with Punds - Your ultimate job search companion" />
     <meta name="keywords" content="job tracker, application tracker, job search, career management, job hunting" />
-    <meta name="author" content="Lovable" />
-    
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Punds Application Tracker" />
     <meta property="og:description" content="Track and organize your job applications in one place" />
